--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
 streamlit==1.27.0
-simpleNomo
 pandas
 matplotlib
 openpyxl
 altair==4.2.0
+simpleNomo
+# (include any other packages your app requires)
